<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/space_5">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/profile_kawasaki" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewSelect"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/edit_image" />


    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_5"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kawasaki_ninja"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ramesh_kumar"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/colorWhite"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_number"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/colorWhite"/>


        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/back_button_white"/>


    </FrameLayout>




</LinearLayout>



