<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutwhite_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_20">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/space_5">

        <ImageView
            android:id="@+id/iv_changePicDialog_close"
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_changePicDialog_close"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingBottom="@dimen/space_16"
            android:paddingLeft="@dimen/space_5"
            android:paddingRight="@dimen/space_5"
            android:paddingTop="@dimen/space_10"
            android:text="@string/profile_picture"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_changePicDialog_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space_5">


        <ImageView
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_camera_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5"
            android:text="@string/camera"
            android:textColor="@color/colorProfileDark"
            android:textSize="@dimen/text_16" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:background="@color/colorProfileLine" />

    <LinearLayout
        android:id="@+id/ll_changePicDialog_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space_5">


        <ImageView
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_gallery_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5"
            android:text="@string/gallery"
            android:textColor="@color/colorProfileDark"
            android:textSize="@dimen/text_16" />


    </LinearLayout>






</LinearLayout>
