<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.SOS"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_sos">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ground_book"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_5"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/profile_kawasaki" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_5"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kawasaki Nonja H2R"
                android:layout_marginLeft="@dimen/space_5"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KA 0 6734"
                android:layout_marginLeft="@dimen/space_5"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_16"

                />


        </LinearLayout>



    </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            card_view:contentPadding="10dp">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:text="@string/last_service_dealer_info"
                android:textSize="@dimen/text_16"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#E6E6E6"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorChild"
             android:padding="@dimen/space_5"
             android:text="Dealer"/>



         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/kawasaki_limited_bangalore"
                 android:padding="@dimen/space_5"
                 android:textColor="@color/colorText"
                 android:textSize="@dimen/text_16"/>

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/call_image"
                 android:layout_gravity="end"/>
         </FrameLayout>
     </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            card_view:contentPadding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:text="@string/search_dealer_contact"
                android:textSize="@dimen/text_16"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#E6E6E6"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:padding="@dimen/space_5"
                        android:textColor="@color/colorChild"
                        android:textSize="@dimen/text_16"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                       />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_list"
                        android:entries="@array/city_list"
                        >

                    </Spinner>
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dealer"
                    android:padding="@dimen/space_5"
                    android:textColor="@color/colorChild"
                    android:textSize="@dimen/text_16"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_dealer"
                        android:entries="@array/dealer_list">

                    </Spinner>
                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_18"
                    android:text="+91-9986220360"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_18"
                    android:text="+91-9986220360"/>

            </LinearLayout>





        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>